--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^9.1.3",
-    "jest": "^29.1.2"
+    "jest": "^29.1.2",
+    "studyme": "^1.0.0"
   }
 }
